--- a/semana3JP/semana3JP/Registro.xaml
+++ b/semana3JP/semana3JP/Registro.xaml
@@ -9,6 +9,29 @@
             <Label Text="Ventana de Registro" FontSize="20" HorizontalOptions="Center"></Label>
             <Label x:Name="lblUsuario" HorizontalOptions="End" FontSize="16"></Label>
 
+            <Grid>
+                <Grid.RowDefinitions>
+                    <RowDefinition/>
+                    <RowDefinition/>
+                    <RowDefinition/>
+                    <RowDefinition/>
+                </Grid.RowDefinitions>
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition/>
+                    <ColumnDefinition/>
+                </Grid.ColumnDefinitions>
+                <Label Text="Nombre" Grid.Row="0" Grid.Column="0"/>
+                <Entry x:Name="txtNombre" Placeholder="Nombre" Grid.Row="0" Grid.Column="1"/>
+                <Label Text="Precio" Grid.Row="1" Grid.Column="0"/>
+                <Entry x:Name="txtPrecio" Placeholder="Precio" Keyboard="Numeric" Grid.Row="1" Grid.Column="1"/>
+                <Label Text="Cantidad" Grid.Row="2" Grid.Column="0"/>
+                <Entry x:Name="txtCantidad" Placeholder="Precio" Keyboard="Numeric" Grid.Row="2" Grid.Column="1"/>
+            </Grid>
+
+            <Button x:Name="btnCalcular" Text="CALCULAR" Clicked="btnCalcular_Clicked"/>
+
+
+
         </StackLayout>
     </ContentPage.Content>
 </ContentPage>
